--- a/pages/bookmarks.html
+++ b/pages/bookmarks.html
@@ -5,7 +5,7 @@ permalink: /bookmarks
 styling: main
 ---
 
-<section class="padding">
+<section>
     <p>
         <span class="newsreader">Bookmarks</span>&emsp;&mdash;&emsp;Resources I return to frequently.
     </p>
