--- a/pages/dbs.html
+++ b/pages/dbs.html
@@ -5,7 +5,7 @@ permalink: /work/dbs
 styling: main
 ---
 
-<section class="padding">
+<section>
     <p>
         <span class="newsreader">DBS</span>&emsp;&mdash;&emsp;Systems design<br>
         Reworking internal systems for scale and reduced bottlenecks amidst a season of rapid growth.
@@ -16,18 +16,18 @@ styling: main
     <img src="/assets/images/dbs-audit.webp" alt="DBS FigJam overview">
 </section>
 
-<section class="padding">
+<section>
     <h2>As client and team volumes multiplied, so did inefficiencies.</h2>
     <p>
         Internal systems hadn't been built to support this scale. Outdated information and inconsistent access made miscommunication and data fracturing far more frequent.
     </p>
 </section>
 
-<section class="padding">
+<section>
     <span class="newsreader" style="font-size:2rem; line-height:150%;">"How might we scale an internal design system to support rapid company and client growth without adding workflow bottlenecks?"</span>
 </section>
 
-<section class="padding">
+<section>
     <h2>Our goal was to establish frictionless collaboration as our system's core.</h2>
     <p>
         We needed to eliminate redundancies and streamline access to eliminate these friction points. Tracking within live client work ensured all bottlenecks were caught quickly.
@@ -38,21 +38,21 @@ styling: main
     <img src="/assets/images/dbs-figma.webp" alt="DBS Figma system overview">
 </section>
 
-<section class="padding">
+<section>
     <h2>I decided to stress-test with our non-technical team to ensure all flows were intuitive.</h2>
     <p>Testing frequently to ensure non-technical team members could navigate with ease eliminated need for additional training on rollout. Working within live client work further reduced additional training: everyone&mdash;clients included&mdash;was already using the new systems comfortably.</p>
 </section>
 
-<section class="padding">
+<section>
     <h2>A centralized documentation hub provided consistent access to everyone.</h2>
     <p>Instructions, SOPs, templates, everything in one place, with everyone having access.</p>
 </section>
 
-<section class="padding">
+<section>
     <span class="newsreader" style="font-size:2rem; line-height:150%;">"A foundation for continued scaling."</span>
 </section>
 
-<section class="padding">
+<section>
     <h2>Drastically reduced errors, slashed handoff time, smoother onboarding for everyone.</h2>
     <p>The overhauled system improved daily efficiency and was praised by leadership and clients for its simplicity and ease-of-use.</p>
 </section>
