--- a/pages/now.html
+++ b/pages/now.html
@@ -5,14 +5,14 @@ permalink: /now
 styling: main
 ---
 
-<section class="padding">
+<section>
     <p>
         <span class="newsreader">Now</span>&emsp;&mdash;&emsp;How I spend my days.<br>
         <span><small>This is a <a href="https://nownownow.com/about" target="_blank">Now page</a>. You should make one, too.</small></span>
     </p>
 </section>
 
-<section class="padding">
+<section>
     <p>
         <span class="newsreader">I'm writing this on my 25th birthday.</span> Coffee's brewing, the new iteration of my portfolio's shipped, and I'm starting my 'blog' fresh on Substack this morning.
     </p>
@@ -32,7 +32,7 @@ styling: main
     </p>
 </section>
 
-<section class="padding">
+<section>
     <h2>Ignoring Tahoe</h2>
     <p>
         I love keeping my devices updated, but I can't get past how terrible liquid glass looks. I'm fully embedded in the Apple ecosystem, so I'll be staying behind on updates for the foreseeable future.
@@ -43,7 +43,7 @@ styling: main
     </p>
 </section>
 
-<section class="padding">
+<section>
     <h2>Reading the Classics</h2>
     <p>
         I've been spending a lot of time working through my TBR list, and <span class="newsreader"><a href="https://literal.club/hayleyjolliffe" target="_blank">documenting on Literal</a></span> when I remember to.
@@ -62,7 +62,7 @@ styling: main
     </p>
 </section>
 
-<section class="padding">
+<section>
     <h2>Taking on Deep Blue</h2>
     <p>
         Growing up, I played chess with a group of friends over rainy lunch breaks. We had fun, and were good enough to qualify for a local chess tournament. We beat some local private school kids, but it wasn't something we took very seriously. It was just fun.
