--- a/pages/reduce-headache.html
+++ b/pages/reduce-headache.html
@@ -5,22 +5,22 @@ permalink: /reduce-headache
 styling: main
 ---
 
-<section class="padding">
+<section>
     <p>
         <span class="newsreader">Reduce headache?</span>&emsp;&mdash;&emsp;A bit of context.
     </p>
 </section>
 
-<section class="padding">
+<section>
     <span class="newsreader" style="font-size:2rem; line-height:150%;">You don't need more software. You need less.</span>
 </section>
 
-<section class="padding">
+<section>
     <p>Guided by core missions, founders are constantly solving problems. Once funding hits, those core missions become susceptible to shiny object syndrome. Suddenly, every new tool looks like a solution to optimize operations just a bit more.</p>
     <p>A new CRM, a bit more automation, perfectly-designed dashboards. You blink, and suddenly your life's mission is being run by a Rube Goldberg machine nobody actually knows how to use.</p>
 </section>
 
-<section class="padding">
+<section>
     <h2>The cost isn't the monthly software bill.</h2>
     <p>
         It's the hours your team spends navigating overlapping systems. The friction in your workflows. The momentum lost in maintenance.
@@ -30,7 +30,7 @@ styling: main
     </p>
 </section>
 
-<section class="padding">
+<section>
     <h2>What if it doesn't have to be this way?</h2>
     <p>
         I design <span class="newsreader">underengineered systems</span>&mdash;lean, intuitive frameworks that grow with you, not against you.
@@ -40,7 +40,7 @@ styling: main
     </p>
 </section>
 
-<section class="padding">
+<section>
     <h2>Your company starts moving again.</h2>
     <p>
         Freed from the shackles of the Rube Goldberg machine, your team spends time building towards the mission, not endlessly wrangling their tools back into place.
@@ -50,7 +50,7 @@ styling: main
     </p>
 </section>
 
-<section class="padding">
+<section>
     <h2>It's time to cut the noise.</h2>
     <p>
         If your workspace feels bloated, confusing, just plain overcomplicated, or your team feels bogged down, it's time to find the signal hiding in the static.
@@ -60,7 +60,7 @@ styling: main
     </p>
 </section>
 
-<section class="padding">
+<section>
     <h2>Reach out</h2>
     <p>
         Let's simplify your systems <span class="newsreader">before</span> they slow you down.
@@ -69,11 +69,11 @@ styling: main
         <a href="mailto:hayleyjolliffe@proton.me?subject=I need to underengineer">Get in touch</a></p>
 </section>
 
-<section class="padding">
+<section>
     <span class="newsreader" style="font-size:2rem; line-height:150%;">"Hayley got us moving again. We didn't realize how bloated our systems were or how much of our time went to unnecessary fighting against our tools. We've saved thousands, and more importantly, our mission feels achievable again."</span>
 </section>
 
-<section class="padding">
+<section>
     <p>
         <span class="newsreader">FAQs</span>
     </p>
