--- a/pages/work.html
+++ b/pages/work.html
@@ -5,14 +5,14 @@ permalink: /work
 styling: main
 ---
 
-<section class="padding">
+<section>
     <p>
         <span class="newsreader">Work</span>&emsp;&mdash;&emsp;Select projects and clients.
     </p>
 </section>
 
 <section>
-    <h2 class="padding">Select Work</h2>
+    <h2>Select Work</h2>
     <ul>
         <a href="/work/dbs">
             <li>
@@ -41,7 +41,7 @@ styling: main
 </section>
 
 <section>
-    <h2 class="padding">Previously</h2>
+    <h2>Previously</h2>
     <ul>
         <li>
             <span>DBS</span><br>
@@ -61,7 +61,7 @@ styling: main
 </section>
 
 <section>
-    <h2 class="padding">Select Clients</h2>
+    <h2>Select Clients</h2>
     <ul>
         <a href="https://leaflogistics.com" target="_blank">
             <li>
