--- a/pages/404.html
+++ b/pages/404.html
@@ -5,7 +5,7 @@ permalink: /404
 styling: main
 ---
 
-<section class="padding">
+<section>
     <p>
         <span class="newsreader">404</span>&emsp;&mdash;&emsp;You seem to have gotten lost, traveler.</a>
     </p>
