--- a/pages/404.html
+++ b/pages/404.html
@@ -10,7 +10,7 @@ styling: main
         <span class="newsreader">404</span>&emsp;&mdash;&emsp;You seem to have gotten lost, traveler.</a>
     </p>
     <p>
-        Looking for something specific? <span class="newsreader"><a href="mailto:hayleyjolliffe@proton.me?subject=Lost traveler">Reach out</a></span>, it might be kicking around in my archives.
+        Looking for something specific? <span class="newsreader"><a href="mailto:hayley@hayleyjolliffe.co?subject=Lost traveler">Reach out</a></span>, it might be kicking around in my archives.
     </p>
     <p>
         If not, it's not too late to <span class="newsreader"><a href="/">turn back</a></span>. See you around, traveler.
