--- a/pages/reduce-headache.html
+++ b/pages/reduce-headache.html
@@ -66,7 +66,7 @@ styling: main
         Let's simplify your systems <span class="newsreader">before</span> they slow you down.
     </p>
     <p>
-        <a href="mailto:hayleyjolliffe@proton.me?subject=I need to underengineer">Get in touch</a></p>
+        <a href="mailto:hayley@hayleyjolliffe.co?subject=I need to underengineer">Get in touch</a></p>
 </section>
 
 <section>
