--- a/index.html
+++ b/index.html
@@ -1,54 +1,17 @@
 ---
 layout: default
 title: Hayley Jolliffe
-styling: main
 ---
 
-<section>
-    <p>
-        Designer, programmer, and researcher thinking about and building systems to eliminate friction.
-        Interested in retrocomputing and reducing data fragmentation.
-    </p>
+<ul>
+    <li>Digital designer & workflow architect.</li>
+    <li>Previously, brand at DBS.</li>
+    <li>Select clients: Adobe, Leaf, SmartHop, Park Rangers Capital.</li>
+</ul>
 
-    <p>I work with people to <a href="/reduce-headache">reduce headache</a> in their digital workflows.</p>
-</section>
-
-<section>
-    <h2>Writing</h2>
-    <ul>
-        {% for post in site.posts %}
-            <a href="{{ post.url }}">
-                <li>
-                    <span>{{ post.title }}</span><br>
-                    <span class="details">{{ post.date | date_to_long_string }}</span>
-                </li>
-            </a>
-        {% endfor %}
-    </ul>
-    <p>
-        <small><a href="/archive">Archive</a></small>
-    </p>
-</section>
-
-<section>
-    <h2>Projects</h2>
-    <ul>
-        <a href="https://github.com/hayleyjolliffe/obsidian-roadmap" target="_blank">
-            <li>
-                <span>Roadmap</span><br>
-                <span class="details">A personal roadmap Vault template for Obsidian.</span>
-            </li>
-        </a>
-    </ul>
-</section>
-
-<section>
-    <h2>Now</h2>
-    <p>
-        Explore recent <a href="/work">work</a>,
-        what I'm <a href="https://literal.club/hayleyjolliffe" target="_blank">reading</a>,
-        or what I'm <a href="/bookmarks">bookmarking</a>.
-    </p>
-
-    <p>For more detailed updates, see <a href="/now">/now</a>, or <a href="https://x.com/hayleyjolliffe" target="_blank">@hayleyjolliffe</a>.</p>
-</section>
+<ul>
+    <li>
+        <a href="mailto:hayley@salvus.studio">Email</a>&emsp;/&emsp;
+        <a href="https://drive.google.com/drive/folders/1ByVn0dNdN2KfyQ-z_xyRtkW4R829roFA?usp=share_link" target="_blank">Work</a>
+    </li>
+</ul>
